<resources>

    <string name="app_name">ONE平台</string>
    <string name="accountId">zengfan1190@163.com</string>
    <string name="mobile_no">13938578189</string>
    <!-- 登录 开始 -->
    <string name="login_regist"><a href="">用户注册</a></string>
    <string name="login_email_address">账号</string>
    <string name="login_email_address_hint">用户注册邮箱</string>
    <string name="email">用户邮箱</string>
    <string name="email_form">用户邮箱</string>
    <string name="login_pw">密码</string>
    <string name="login_save_pw">保存密码</string>
    <string name="login">登录</string>
    <string name="login_forget_pw"><a href="">忘记密码</a></string>

<string name="infor_null"><a href="">不能为空</a></string>
<string name="phone_wrong"><a href="">手机号不合法</a></string>
      <string name="code"><a href="">验证码</a></string>
  <string name="send_code"><a href="">请求验证码</a></string>

    <string name="login_instruction">不了解智能家居？<a href="http://www.hanwei.cn">请点击</a></string>
    <!-- 登录 结束 -->
    <!-- 关于  开始 -->
    <string name="abouttitle">关于</string>
    <string name="about">汉威电子智能家居，可以监控各种传感器的信息</string>
    <string name="version">版本 1.0</string>
    <string name="aboutweb">wap.hanwei.cn</string>
    <string name="contactsus">Copyright©Since 1998 汉威电子</string>
    <string name="moreapp">更多来自汉威的应用</string>
    <!-- 关于  结束 -->
    <!-- 帮助  开始 -->
    <string name="commonProblem">常见问题</string>
    <string name="onlineManual">在线说明书</string>
    <string name="onlineVideo">在线视频</string>
    <!-- 帮助  结束 -->
    <!-- 配置中心 开始 -->
    <string name="account_setting">账号管理</string>
    <string name="push_setting">系统通知</string>
    <string name="push_alerm">报警推送</string>
    <string name="push_warn">预警推送</string>
    <string name="push_ordinary">日常推送</string>
    <!-- 配置中心 结束 -->
    <!-- 账号管理 开始 -->
    <string name="account_nickname">昵称</string>
    <string name="account">账号</string>
    <string name="account_hint">电子邮箱地址</string>
    <string name="mobile">手机号</string>
    <string name="mobile_hint">报警短信通知</string>
    <string name="chg_pw">修改密码</string>
    <string name="pw">现密码</string>
    <string name="pw_hint">登录用户密码</string>
    <string name="pw_new">新密码</string>
    <string name="pw_new_hint">至少六位</string>
    <string name="pw_new_repeat">重复密码</string>
    <string name="pw_new_repeat_hint">重复新密码</string>
    <string name="pw_submit">更换密码</string>
    <!-- 账号管理  结束 -->
    <!-- home 开始 -->
    <!-- home 结束 -->


    <!-- 用户信息 开始 -->
    <string name="test_name">曾凡</string>
    <string name="test_addr">火星</string>
    <string name="profile">用户信息</string>
    <string name="profile_name">住址</string>
    <string name="profile_addr">业主名称</string>
    <string name="profile_phone">固话</string>
    <string name="profile_tel">联系方式</string>
    <!-- 用户信息 结束 -->


    <!-- 用户信息 开始 -->
    <string name="test_nick">曾凡</string>
    
    <string name="devlist">团队成员</string>
    <string name="developer_name1">曾凡</string>
    <string name="developer_name2">王贺喜</string>
    <string name="developer_name3">闫威</string>
    <string name="developer_name4">李静</string>
    <string name="developer_name5">李羽皓</string>
    <string name="developer_name6">李留品</string>
    <string name="developer_name7">苌帅</string>
    <string name="developer_name8">赵帅</string>
    
    <!-- 用户信息 结束 -->


    <!-- 个性化提示 开始 -->
    <string name="hint_pm25_high">柯南：pm2.5可以直接伤害到孩子的肺，通过呼吸后的供氧，传到全身，影响孩子成长发育，所以我三十多岁了还在读小学。</string>
    <!-- 个性化提示 结束 -->
 <!-- 更新提示 开始 -->
<string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <!-- 个性化提示 结束 -->

    <!-- 異常 -->
    <string name="network_not_connected">处理过程发生错误，可能尚未开启网络!</string>
    <string name="network_not_connected_view_local">网络连接失败,为您显示本地缓存数据，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="submit_report">提交报告</string>
    <string name="app_menu_surelogout">确定退出程序吗？</string>
    <string name="app_menu_cancellation">确定注销程序吗？</string>
    <string name="tip_ok">确定</string>
    <string name="tip_cancel">取消</string>
    <string name="tip_input">提示</string>
    <string name="tip_quit">退出</string>
    <string name="tip_task_finish">提交成功，任务完成！</string>
    <string name="tip_notloginnull">用户名或密码不能为空</string>
    <string name="tip_loginfail">登录失败，请输入正确用户名密码</string>
    <string name="tip_loginerror">登录失败，请重新登录</string>
    <string name="tip_isquit">是否退出</string>
    <string name="tip_loaderror">加载失败，请重新加载</string>
    <string name="tip_connectfail">處处理过程发生错误，可能尚未开启网络!</string>
    <string name="tip_checkresult0">请选择检查结果</string>
    <string name="tip_corrective0">请选择整改措施</string>
    <string name="text_num_limit_left">还可输入%d个字</string>
      
      
    <!-- listview组件 -->

    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="load_more">更多</string>
    <string name="load_ing">加载中···</string>
    <string name="load_full">已加载全部</string>
    <string name="load_empty">暂无数据</string>
    <string name="load_error">加载数据出错</string>  
</resources>