<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.hw.one.mobile.platform"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffefebe7" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:paddingTop="25dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="60.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:id="@+id/MorePageTableLayout_Follow"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="1.0dip"
                    android:shrinkColumns="0"
                    android:stretchColumns="0" >
                </TableLayout>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:layout_marginTop="10.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="4.0dip"
                android:text="@string/push_setting"
                android:textColor="@color/gray"
                android:textSize="16.0sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="1.0dip"
                    android:shrinkColumns="0"
                    android:stretchColumns="0" >

                    <TableRow
                        android:id="@+id/more_page_row4"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@color/white" >

                        <me.xiaopan.android.switchbutton.SwitchButton
                            android:id="@+id/push_alarm"
                            style="@style/switch_button_item"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/push_alerm"
                            app:frameDrawable="@drawable/switch_frame"
                            app:sliderDrawable="@drawable/selector_switch_slider"
                            app:stateDrawable="@drawable/selector_switch_state"
                            app:stateMaskDrawable="@drawable/switch_state_mask"
                            app:withTextInterval="16dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@color/white" >

                        <me.xiaopan.android.switchbutton.SwitchButton
                            android:id="@+id/push_warn"
                            style="@style/switch_button_item"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/push_warn"
                            android:visibility="gone"
                            app:frameDrawable="@drawable/switch_frame"
                            app:sliderDrawable="@drawable/selector_switch_slider"
                            app:stateDrawable="@drawable/selector_switch_state"
                            app:stateMaskDrawable="@drawable/switch_state_mask"
                            app:withTextInterval="16dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@color/white" >

                        <me.xiaopan.android.switchbutton.SwitchButton
                            android:id="@+id/push_ordinary"
                            style="@style/switch_button_item"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/push_ordinary"
                            app:frameDrawable="@drawable/switch_frame"
                            app:sliderDrawable="@drawable/selector_switch_slider"
                            app:stateDrawable="@drawable/selector_switch_state"
                            app:stateMaskDrawable="@drawable/switch_state_mask"
                            app:withTextInterval="16dp" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>